player paper bug intoduced, have to click far left of button because computer or comp icon is stretching into it

--- a/style.css
+++ b/style.css
@@ -67,4 +67,11 @@ html {
     transform: scale(4);
   }
 
+  #computer{display: grid;}
+  /*did this to center comp-icon. player paper bug?*/
+
+  #comp-icon{
+    transform: scale(6);
+    align-self: center;
+  }
   
